pamc/src/tests/sample_code/should_fail/parse/labeled_params/dash_before_tilde.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(-~x: Nat): Nat {
    Nat.O
};
